# habit_tracker

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
habit/: admin.py  bot.py  models.py  pagination.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
habit/migrations/: 0001_initial.py  0002_alter_habit_linked_habit_alter_habit_periodicity.py  0002_initial.py  0003_alter_habit_options_remove_habit_frequency_and_more.py
habit_tracker/: celery.py  settings.py  urls.py
users/: admin.py  models.py  permissions.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_telegram_chat_id.py
