[tool.poetry]
name = "habit-tracker"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.2"
djangorestframework = "^3.16.0"
djangorestframework-simplejwt = "^5.5.0"
python-telegram-bot = "^22.0"
python-dotenv = "^1.1.0"
celery = "^5.5.2"
drf-yasg = "^1.21.10"
django-phonenumber-field = "^8.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
